# credit_risk_classifier

./: .gitattributes  .gitignore  README.md  compose.yml  config.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  infra.yml  retrain.yml  run_tests.yml  tests.yml  training_and_app.yml
aws_configs/: API_gateway.tf  ECR.tf  example_features.json  lambda.tf  response.json  test_event_payload.json
infra/: ecr.tf  lambda.tf  outputs.tf  s3.tf  ssm.tf  terraform.tf  vars.tf
infra/environments/dev/: backend.tf  dev.tfvars  main.tf  providers.tf  variables.tf
infra/environments/prod/: backend.tf  main.tf  prod.tfvars  providers.tf
infra/modules/: s3.tf  variables.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/ssm/: main.tf  outputs.tf  variables.tf
models/tuned/xgb/: standard.pkl
notebooks/: test_the_api.ipynb
src/: ingest_and_clean_data.py
src/credit_risk_classifier/: app.py  inference.py  ingest_and_clean_data.py  paths.py  schemas.py  train.py  tune.py  validate.py
tests/: test_API_integration.py  test_API_unit.py  test_schemas.py
