[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-classifier"
version = "1.0.0"
description = "An application that predicts default on a loan"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["unit", "integration"]